--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
   "imports": {
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react": "https://esm.sh/react@^19.2.3",
+    "sql.js": "https://esm.sh/sql.js@^1.13.0"
   }
 }
 </script>
